--- a/ChokeCheckBack/src/main/resources/application.properties
+++ b/ChokeCheckBack/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.properties.hibernate.event.merge.entity_copy_observer=allow
 
+spring.jackson.mapper.default-view-inclusion=true
+
 
 spring.profiles.active=dev
 
