--- a/choke_check_front/pubspec.yaml
+++ b/choke_check_front/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   bloc: ^8.1.3
   google_maps_flutter: ^2.2.8
   flutter_rating_bar: ^4.0.1
+  file_picker: ^8.0.0+1
 
 dev_dependencies:
   flutter_test:
