--- a/choke_check_front/pubspec.yaml
+++ b/choke_check_front/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   google_maps_flutter: ^2.2.8
   flutter_rating_bar: ^4.0.1
   file_picker: ^8.0.0+1
+  camera: ^0.11.0+1
+  path_provider: ^2.1.3
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
