--- a/choke_check_web/package.json
+++ b/choke_check_web/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.2",
     "express": "^4.18.2",
+    "firebase": "^10.12.2",
     "ng2-charts": "^6.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
